        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=18230
        tspan in link not working

        Implement SVG Errata: "The 'a' element may contain any
        element that its parent may contain, except itself."



Canonical link: https://commits.webkit.org/25394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31859 268f45cc-cd09-0410-ab3c-d52691b4dbfc